--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -942,8 +942,51 @@ textarea::-ms-input-placeholder
     transform:scale(1.1);
 }	
 
-#conferenceform p
+/*Conference's part*/
+
+#confForm p
 {
     color: white ;
 
 }
+.styled-select {
+    background: url(http://i62.tinypic.com/15xvbd5.png) no-repeat 96% 0;
+    height: 29px;
+    overflow: hidden;
+    width: 100%;
+ }
+ 
+ .styled-select select {
+    background: transparent;
+    border: none;
+    font-size: 14px;
+    height: 29px;
+    padding: 5px; /* If you add too much padding here, the options won't show in IE */
+    width: 268px;
+ }
+ 
+ .styled-select.slate {
+    background: url(http://i62.tinypic.com/2e3ybe1.jpg) no-repeat right center;
+    height: 34px;
+    width: 240px;
+ }
+ 
+ .styled-select.slate select {
+    border: 1px solid #ccc;
+    font-size: 16px;
+    height: 34px;
+    width: 268px;
+    
+ }
+ .semi-square {
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    background-color: gray; 
+    color: #fff;
+    outline: none;
+    letter-spacing: 1px;
+	font-family: 'Muli', sans-serif;
+    font-size: 15px;
+    font-weight: normal;
+ }
